--- a/program2.html
+++ b/program2.html
@@ -18,6 +18,7 @@ $(document).ready(function(){
    		$('#bottom').css('visibility', 'visible');
    		$('#corner').css('visibility', 'visible');
    		$('#bottomScreen').css('visibility', 'visible');
+   		$("#standing").css('visibility','visible');
    		start();
     	})
     });	
@@ -27,10 +28,12 @@ function start()
 	numCanvases=0;
 	currCanvas = 0;
 	img = new Image();
-    img.src = 'NAOcanvas1.jpg';
+    img.src = 'NAOcanvas7.jpg';
     actions = new Array;
     text = new Array;
     durations = new Array;
+    standing = new Array;
+    standing[0] = true;
     $("#nextButton").click(function(){doneClick();});
 	inventCanvas();
 }
@@ -38,8 +41,20 @@ function start()
 function inventCanvas()
 {
 	numCanvases+=1;
-	if(numCanvases!=1)
+	if(numCanvases!=1) {
 		currCanvas +=1;
+		if ((standing[currCanvas-1] && actions[currCanvas-1]!="Sit Down") || actions[currCanvas-1]=="Stand Up")
+			standing[currCanvas]=true;
+		else
+			standing[currCanvas]=false;
+		
+		if (standing[currCanvas]) {
+   			standingOptions();
+   		}
+   		else {
+   			sittingOptions();
+   		}
+	}
 	$("#nextButton").show();
 	$('body').append('<canvas id="myCanvas' + (numCanvases-1) + '" class="canvasClass" height="450" width="780"></canvas>')
 	$(document.getElementById("myCanvas"+(numCanvases-1))).css({height:"450px",marginLeft:"+=205px"});
@@ -61,6 +76,7 @@ function inventMidCanvas()
 	for (i=numCanvases;i>currCanvas;i--) {
 		actions[i] = actions[i-1];
 		text[i]= text[i-1];
+		standing[i] = standing[i-1];
 		if (document.getElementById("duration"))
 			durations[i] = durations[i-1];
 		$("#timelinetext"+i).html(
@@ -130,16 +146,55 @@ function timelineHelper()
 		
 }
 
+function standingOptions()
+{
+	if (document.getElementById("stand")){
+		$("#select option[id='stand']").remove();
+		$("#select option[id='lie']").remove();
+		$("#select option[id='stand']").remove();
+		$("#select").append('<option id="sit" value="Sit Down">Sit Down</option>');
+		$("#select").append('<option id="walkF" value = "Walk Forward">Walk Forward</option>');
+		$("#select").append('<option id="walkB" value = "Walk Backward">Walk Backward</option>');
+		$("#sitting").css('visibility','hidden');
+   		$("#standing").css('visibility','visible');
+	}
+}
+
+function sittingOptions()
+{
+	if (document.getElementById("sit")){
+		$("#select option[id='sit']").remove();
+		$("#select option[id='walkF']").remove();
+		$("#select option[id='walkB']").remove();
+		$("#select").append('<option id="stand" value = "Stand Up">Stand Up</option>');
+		$("#select").append('<option id="lie" value = "Lie Down">Lie Down</option>');
+		$("#sitting").css('visibility','visible');
+   		$("#standing").css('visibility','hidden');
+	}
+}
+
 function editCanvas()
 {
+	
 	if(!text[currCanvas] || text[currCanvas] == "")
 		getInfo();
 	$(document.getElementById("myCanvas"+currCanvas)).hide();
 	currCanvas = parseInt(thisCanvas);
+	if (standing[currCanvas]) {
+		$("#sitting").css('visibility','hidden');
+		$("#standing").css('visibility','visible');
+		standingOptions();
+	}
+   	else {
+   		$("#sitting").css('visibility','visible');
+   		$("#standing").css('visibility','hidden');
+   		sittingOptions();
+   	}
 	$(document.getElementById("myCanvas"+currCanvas)).show();
 	document.getElementById("textarea").value = text[currCanvas];
 	document.getElementById("select").value = actions[currCanvas];
-	
+	if (true)
+		$(document.getElementById("duration")).css('visibility','hidden');
 }
 function doneClick()
 {
@@ -154,7 +209,7 @@ function doneClick()
     	if (currCanvas ==0) {
 			$(document.getElementById("myCanvas"+currCanvas)).slideUp();
 			img = new Image();
-    		img.src = 'NAOcanvas8.jpg';
+    		img.src = 'NAOcanvas2.jpg';
     	}
 		else
 			$(document.getElementById("myCanvas"+currCanvas)).slideUp();
@@ -178,28 +233,58 @@ function getInfo()
 
 function addSelect()
 {
-getInfo();
-if (document.getElementById("walkF").selected || document.getElementById("walkB").selected) {
-	$("#canvasAction2").html(
-		'<select id = "duration"><option id="5">For five seconds</option><option id="10">For ten seconds</option><option id="15">For fifteen seconds</option><option id="20">For twenty seconds</option></select>');
-}
-else if (document.getElementById("noAction").selected || document.getElementById("sit").selected) {
-	if(document.getElementById("duration"))
+	/*if (document.getElementById("select").value == "Walk Forward" || document.getElementById("select").value == "Walk Backward") {
+		$("#canvasAction2").html(
+			'<select id = "duration"><option id="5">For five seconds</option><option id="10">For ten seconds</option><option id="15">For fifteen seconds</option><option id="20">For twenty seconds</option></select>');
+	}
+	else {
 		$(document.getElementById("duration")).css('visibility','hidden');
+	}
+	*/
+	if (document.getElementById("select").value == "Sit Down" || (document.getElementById("select").value != "Stand Up" && !document.getElementById("sit"))) {
+		if (currCanvas!=numCanvases-1 && standing[currCanvas+1]) {
+			if (confirm('If you choose this option, I have to make another part of the story so I can stand up. Would you still like to continue?')) {
+				getInfo();
+				fixError();
+			}
+			else 
+				document.getElementById("select").value = actions[currCanvas];
+		}
+		else
+			getInfo();
+   	}
+   	else if (document.getElementById("select").value == "Stand Up" || (document.getElementById("select").value != "Sit Down" && !document.getElementById("stand"))) {
+		if (currCanvas!=numCanvases-1 && !standing[currCanvas+1]) {
+			if (confirm('If you choose this option, I have to make another part of the story so I can sit down. Would you still like to continue?')) {
+				getInfo();
+				fixError();
+			}
+			else
+				document.getElementById("select").value = actions[currCanvas];
+		}
+		else
+			getInfo();
+	}
+	else
+		getInfo();
 }
-if (document.getElementById("sit").selected) {
-	//img = new Image();
-    //img.src = 'NAOsitting.jpg';
-    //ctx.drawImage(img, 465, 350);
-    }
+
+function fixError()
+{
+	doneClick();
+	if (standing[currCanvas+1]) {
+		alert("hi...");
+		document.getElementById("sit").selected = true;
+		getInfo();
+		standing[currCanvas+1]=false;
+	}
+	else {
+		document.getElementById("stand").selected = true;
+		getInfo();
+		alert(standing[currCanvas+1]);
+		standing[currCanvas+1]=true;
+	}	
 }
-
-
-
-
-
-
-
 
 function sendInfo()
 {
@@ -243,9 +328,9 @@ function delay(time) {
 
 
 <p id="test"></p>
-<div id="canvasAction" ><select id = "select" onchange="addSelect()"><option id="noAction" name="">No Action</option><option id="sit" name="sit">Sit Down</option><option id="walkF">Walk Forwards</option><option id="walkB">Walk Backwards</option></select></div>
+<div id="canvasAction" ><select id = "select" onchange="addSelect()"><option id="noAction" value="No Action">No Action</option><option id="wave" value = "Wave">Wave</option><option id="sit" value="Sit Down">Sit Down</option><option id="walkF" value = "Walk Forward">Walk Forward</option><option id="walkB" value = "Walk Backward">Walk Backward</option></select></div>
 <div id="canvasAction2" ></div>
-<div id="canvasText" ><textarea id = "textarea" rows="13" cols="23" onchange="getInfo()"></textarea></div>
+<div id="canvasText" ><textarea id = "textarea" rows="13" cols="19" onchange="getInfo()"></textarea></div>
 <div id="bottomScreen"></div>
 <div id="timelineLabel"><h1> TIMELINE </h1></div>
 <div id="scrollBox"></div>
@@ -253,6 +338,8 @@ function delay(time) {
 <div id="corner"></div>
 
 <img id="nextButton" src="addNextPart2.jpg">
+<img id="sitting" src="naoSitting2.jpg">
+<img id="standing" src="naoStanding.jpg">
 
 </body>
 </html>
